Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = No\n",
+    "kindof_neighbors = kindof_neighbors[]\n",
     "kindof_neighbors"
    ]
   },
