Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "No # add code here"
+    "countries.append() # add code here"
    ]
   },
   {
