--- a/index.ipynb
+++ b/index.ipynb
@@ -234,11 +234,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append() # add code here"
+    "countries.append('Malta') # add code here"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.a # add code here"
    ]
   },
   {
