--- a/index.ipynb
+++ b/index.ipynb
@@ -312,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries[6] # add code here"
    ]
   },
   {
